WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156515
Attr.value should not be nullable
https://bugs.webkit.org/show_bug.cgi?id=156515
Summary
Attr.value should not be nullable
Chris Dumez
Reported
2016-04-12 13:57:46 PDT
Attr.value should not be nullable as per:
https://dom.spec.whatwg.org/#interface-attr
Firefox and Chrome agree with the spec but we don't.
Attachments
Patch
(6.90 KB, patch)
2016-04-12 14:23 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-04-12 14:23:50 PDT
Created
attachment 276275
[details]
Patch
WebKit Commit Bot
Comment 2
2016-04-12 15:38:28 PDT
Comment on
attachment 276275
[details]
Patch Clearing flags on attachment: 276275 Committed
r199392
: <
http://trac.webkit.org/changeset/199392
>
WebKit Commit Bot
Comment 3
2016-04-12 15:38:33 PDT
All reviewed patches have been landed. Closing bug.
Antti Koivisto
Comment 4
2016-04-13 01:30:01 PDT
***
Bug 156512
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug